--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3019,7 +3019,7 @@ input, select, textarea {
 			#header .button.primary {
 				background-color: #ffffff;
 				box-shadow: inset 0 0 0 1px #ffffff !important;
-				color: #4686a0 !important;
+				color: #555 !important;  /* MOD */
 			}
 
 				#header input[type="submit"].primary:hover,
@@ -3118,7 +3118,8 @@ input, select, textarea {
 			-webkit-transition: opacity 1s ease;
 			-ms-transition: opacity 1s ease;
 			transition: opacity 1s ease;
-			background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+			/*background-image: linear-gradient(45deg, #4fa49a, #4361c2);*/ /* MOD */
+			background-color: #242A27;
 			content: '';
 			height: 100%;
 			left: 0;
