added titles of some of the invited speakers's talks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,14 +37,17 @@ ol, ul {
 	list-style: none;
 }
 
-blockquote, q {
+blockquote {
 	quotes: none;
 }
 
-	blockquote:before, blockquote:after, q:before, q:after {
+	blockquote:before, blockquote:after {
 		content: '';
 		content: none;
 	}
+q {
+	font-style: italic;
+}
 
 table {
 	border-collapse: collapse;
